# timeir_api

./: README.md  pyproject.toml  requirements.txt
src/timeir_api/: exceptions.py  main.py
src/timeir_api/routers/: timerouter.py
src/timeir_api/services/: timeir_service.py
src/timeir_api/settings/: metadata_config.py
src/timeir_api/timeroute/: routers.py
src/timeir_unofficial_api/timespider/timespider/: items.py  middlewares.py  pipelines.py  settings.py
tests/: test_timeir_routers.py  test_timeir_service.py
