[project]
name = "timeir-api"
version = "0.1.0"
description = "Unofficial Timeir API based-on FastAPI and Python. 🕰 🚀"
authors = [
    {name = "mostafa2k", email = "m2kappswindows8.1@gmail.com"},
]
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn>=0.30.6",
    "nest-asyncio>=1.6.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
